Elimninate the last known source of bogus "wrong parent style context" warnings, and make these warnings into assertions.  Bug 374297, r+sr+a=dbaron